# agent

./: .env.example  .envrc  .gitignore  AGENTS.md  Makefile  model_tests.example.json  requirements.txt
apps/agentrun/: README.md  __init__.py  adapter.py  app.json  external_cli.py  main.py  model_backends.py  pyproject.toml
apps/agentrun/agentrun/: __init__.py  eventbus.py  kernel.py  logging.py  service.py
apps/agentrun/agentrun/capabilities/: __init__.py  llm_gateway.py  memory.py  skills.py  tools.py
apps/agentrun/agentrun/cli/: __init__.py  main.py
apps/agentrun/agentrun/conf/: runtime.yaml
apps/agentrun/agentrun/conf/providers/: api.yaml
apps/agentrun/agentrun/core/: __init__.py  config.py  contract.py  jsonio.py  run.py  schema.py  yaml_lite.py
apps/agentrun/agentrun/guardrail/: __init__.py
apps/agentrun/agentrun/orchestration/: __init__.py  context.py  executor.py  loop.py  state.py
apps/agentrun/agentrun/providers/: __init__.py  base.py  code_cli.py
apps/agentrun/agentrun/schemas/: profile.schema.yaml  request.schema.yaml
apps/agentrun/conf/: README.md
apps/agentrun/docs/: README.md
apps/agentrun/scripts/: build-state.py
apps/agentrun/src/agentrun/: kernel.py  service.py
apps/agentrun/src/agentrun_workbench/: adapter.py  external_cli.py  main.py  model_backends.py  skill_registry.py  state.py
apps/agentrun/tests/: test_m0_cli_e2e.py  test_m0_contract.py  test_m1_code_cli.py  test_m1_guardrail.py  test_m1_llm_api.py  test_m1_tmux.py  test_m2_loop.py  test_m3_capabilities.py  test_m3_decoupling.py  test_m4_distribution.py
(+224 files in other folders)
