[project]
name = "agentrun"
version = "0.1.0"
description = "Business-agnostic local agent runtime: file-contract sessions/turns/tasks over code_cli / llm_api / tmux providers."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentrun = "agentrun.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentrun*", "agentrun_workbench*"]

[tool.setuptools.package-data]
agentrun = ["schemas/*.yaml"]
